--- a/TG.RMSCLIENT.WEB/1.html
+++ b/TG.RMSCLIENT.WEB/1.html
@@ -8,10 +8,10 @@
     <script src="assets/js/bootstrap.js"></script>
 </head>
 
-<body>
-    <div class="container">
+<body style="background-image: url('image/background.jpg');">
+    <div class="container" style="">
         <div class="col-lg-12 col-md-12 col-sm-12 well" style="margin-top:2%;height:100%">
-            <p></p>
+            <p style="font-weight:bold;color:darkcyan;font-size:larger">Please check your inbox. An e-mail has been sent to you via email. Please confirm your reservation booking.</p>
         </div>
     </div>
 </body>
